<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShowCryptocurrencyDetails">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/currency_logo_detail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        tools:src="@drawable/currency_template_image"/>

    <TextView
        android:id="@+id/tv_market_cap_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_detail"
        app:layout_constraintStart_toEndOf="@+id/currency_logo_detail"
        android:text="@string/MarketCapRank"/>

    <TextView
        android:id="@+id/tv_market_cap_rank_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_detail"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="1"/>

    <TextView
        android:id="@+id/tv_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/tv_market_cap_rank"
        app:layout_constraintStart_toEndOf="@+id/currency_logo_detail"
        android:text="@string/mc_change"/>

    <TextView
        android:id="@+id/tv_change_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/tv_market_cap_rank"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="0.05613"/>

    <TextView
        android:id="@+id/tv_ath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/tv_change"
        app:layout_constraintStart_toEndOf="@+id/currency_logo_detail"
        android:text="@string/ath"/>

    <TextView
        android:id="@+id/tv_ath_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/tv_change"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="19665.39"/>

    <TextView
        android:id="@+id/tv_ath_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/tv_ath"
        app:layout_constraintStart_toEndOf="@+id/currency_logo_detail"
        android:text="@string/ath_change"/>

    <TextView
        android:id="@+id/tv_ath_change_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/tv_ath"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="-59.68%"/>

    <TextView
        android:id="@+id/tv_circulating_supply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/tv_ath_change"
        app:layout_constraintStart_toEndOf="@+id/currency_logo_detail"
        android:text="@string/circulating_supply"/>

    <TextView
        android:id="@+id/tv_circulating_supply_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/tv_ath_change"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="18152500"/>

    <TextView
        android:id="@+id/tv_total_supply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/tv_circulating_supply"
        app:layout_constraintStart_toEndOf="@+id/currency_logo_detail"
        android:text="@string/total_supply"/>

    <TextView
        android:id="@+id/tv_total_supply_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/tv_circulating_supply"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="21000000"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>